<resources>
    <string name="app_name">CheckIsValid</string>
    <string name="action_settings">Settings</string>
    <string name="verify_the_user_name">验证用户名</string>
    <string name="verify_the_password">验证密码</string>
    <string name="verify_the_phonenumber">验证手机号</string>
    <string name="verify_the_email">验证邮箱</string>
    <string name="verify_the_chinese">验证汉字</string>
    <string name="verify_the_id_card">验证身份证</string>
    <string name="verify_the_url">验证URL</string>
    <string name="verify_the_ip_address">验证IP地址</string>
</resources>
